# Ather-Home-Assistant-integration

./: .gitignore  CHANGELOG.md  README.md  check_timestamps.py  check_timestamps_shared.py  hacs.json  verify_last_synced.py  verify_security.py
ather_binary/: README_BINARY.md  __init__.py  api.py  binary_sensor.py  build.sh  config_flow.py  const.py  coordinator.py  device_tracker.py  entity.py  helpers.py  manifest.json  ride_manager.py  sensor.py  switch.py
ather_binary/core/: Cargo.toml
ather_electric/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_tracker.py  manifest.json  sensor.py  switch.py
custom_components/ather_electric/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_tracker.py  manifest.json  sensor.py
