[package]
name = "ather_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ather_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
